# rs-hex2bytes

./: Cargo.toml  README.md  bench.mjs  build.sh  rs_hex2bytes.wasm  test.mjs
src/: chunk8.rs  chunk8simd.rs  ext_wasm.rs  lib.rs
