[package]
name = "rs-hex2bytes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"
missing_const_for_fn = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies]

[features]
ext_wasm = []
wasm_simd = []

chunk8 = []
chunk8simd = []
